--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 imageio==2.34.1
 matplotlib==3.7.3
+moviepy==1.0.3
 numpy==1.24.1
 opencv_python==4.8.0.76
 opt_einsum==3.3.0
 Pillow==9.3.0
-Pillow==10.3.0
-scipy==1.13.0
+Pillow==11.2.1
+ptlflow==0.3.1
+scipy==1.15.2
 setuptools==68.2.2
 skimage==0.0
+tensorboardX==2.6.2.2
 torch==2.2.0
+torchmetrics==1.4.0
 torchvision==0.17.0
 tqdm==4.66.1
